fix uneven background under sidebar scrim

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,9 @@ body.loaded{
     .hero__headline, .toolbar, #mdContainer{
         opacity:1;
     }
+    #mdContainer {
+        background-color:white;
+    }
 }
 
 #THREE{
